[gd_scene load_steps=3 format=2]

[ext_resource path="res://scenes/miscs/work-station/WorkStation.gd" type="Script" id=1]

[sub_resource type="CircleShape2D" id=1]
radius = 70.1061

[node name="WorkStation" type="Area2D"]
collision_layer = 0
script = ExtResource( 1 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
shape = SubResource( 1 )

[node name="Timer" type="Timer" parent="."]
wait_time = 8.0
autostart = true
[connection signal="body_entered" from="." to="." method="_on_WorkStation_body_entered"]
[connection signal="body_exited" from="." to="." method="_on_WorkStation_body_exited"]
[connection signal="timeout" from="Timer" to="." method="_on_Timer_timeout"]
